initial notes